test/interp/spec/br_if.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/br_if.wast
(;; STDOUT ;;;
assert_invalid error:
  third_party/testsuite/br_if.wast:196:49: type mismatch of unary op. got void, expected i32
  (module (func $type-false-i32 (block (i32.ctz (br_if 0 (i32.const 0))))))
                                                ^
assert_invalid error:
  third_party/testsuite/br_if.wast:200:49: type mismatch of unary op. got void, expected i64
  (module (func $type-false-i64 (block (i64.ctz (br_if 0 (i32.const 0))))))
                                                ^
assert_invalid error:
  third_party/testsuite/br_if.wast:204:49: type mismatch of unary op. got void, expected f32
  (module (func $type-false-f32 (block (f32.neg (br_if 0 (i32.const 0))))))
                                                ^
assert_invalid error:
  third_party/testsuite/br_if.wast:208:49: type mismatch of unary op. got void, expected f64
  (module (func $type-false-f64 (block (f64.neg (br_if 0 (i32.const 0))))))
                                                ^
assert_invalid error:
  third_party/testsuite/br_if.wast:213:48: type mismatch of unary op. got void, expected i32
  (module (func $type-true-i32 (block (i32.ctz (br_if 0 (i32.const 1))))))
                                               ^
assert_invalid error:
  third_party/testsuite/br_if.wast:217:48: type mismatch of unary op. got void, expected i64
  (module (func $type-true-i64 (block (i64.ctz (br_if 0 (i64.const 1))))))
                                               ^
assert_invalid error:
  third_party/testsuite/br_if.wast:217:57: type mismatch of br_if condition. got i64, expected i32
  (module (func $type-true-i64 (block (i64.ctz (br_if 0 (i64.const 1))))))
                                                        ^
assert_invalid error:
  third_party/testsuite/br_if.wast:221:48: type mismatch of unary op. got void, expected f32
  (module (func $type-true-f32 (block (f32.neg (br_if 0 (f32.const 1))))))
                                               ^
assert_invalid error:
  third_party/testsuite/br_if.wast:221:57: type mismatch of br_if condition. got f32, expected i32
  (module (func $type-true-f32 (block (f32.neg (br_if 0 (f32.const 1))))))
                                                        ^
assert_invalid error:
  third_party/testsuite/br_if.wast:225:48: type mismatch of unary op. got void, expected f64
  (module (func $type-true-f64 (block (f64.neg (br_if 0 (i64.const 1))))))
                                               ^
assert_invalid error:
  third_party/testsuite/br_if.wast:225:57: type mismatch of br_if condition. got i64, expected i32
  (module (func $type-true-f64 (block (f64.neg (br_if 0 (i64.const 1))))))
                                                        ^
assert_invalid error:
  third_party/testsuite/br_if.wast:231:12: type mismatch of br_if value. got void, expected i32
    (block (br_if 0 (i32.const 0)) (i32.const 1))
           ^
assert_invalid error:
  third_party/testsuite/br_if.wast:237:12: type mismatch of br_if value. got void, expected i32
    (block (br_if 0 (i32.const 1)) (i32.const 1))
           ^
assert_invalid error:
  third_party/testsuite/br_if.wast:243:21: type mismatch of br_if value. got i64, expected i32
    (block (br_if 0 (i64.const 1) (i32.const 0)) (i32.const 1))
                    ^
assert_invalid error:
  third_party/testsuite/br_if.wast:249:21: type mismatch of br_if value. got i64, expected i32
    (block (br_if 0 (i64.const 1) (i32.const 0)) (i32.const 1))
                    ^
assert_invalid error:
  third_party/testsuite/br_if.wast:256:21: type mismatch in nop. got void, expected i32
    (block (br_if 0 (nop)))
                    ^
assert_invalid error:
  third_party/testsuite/br_if.wast:262:21: type mismatch of br_if condition. got i64, expected i32
    (block (br_if 0 (i64.const 0)))
                    ^
assert_invalid error:
  third_party/testsuite/br_if.wast:268:35: type mismatch in nop. got void, expected i32
    (block (br_if 0 (i32.const 0) (nop)) (i32.const 1))
                                  ^
assert_invalid error:
  third_party/testsuite/br_if.wast:274:35: type mismatch of br_if condition. got i64, expected i32
    (block (br_if 0 (i32.const 0) (i64.const 0)) (i32.const 1))
                                  ^
assert_invalid error:
  third_party/testsuite/br_if.wast:280:39: label variable out of range (max 1)
  (module (func $unbound-label (br_if 1 (i32.const 1))))
                                      ^
assert_invalid error:
  third_party/testsuite/br_if.wast:284:60: label variable out of range (max 3)
  (module (func $unbound-nested-label (block (block (br_if 5 (i32.const 1))))))
                                                           ^
assert_invalid error:
  third_party/testsuite/br_if.wast:288:37: label variable out of range (max 1)
  (module (func $large-label (br_if 0x100000001 (i32.const 1))))
                                    ^^^^^^^^^^^
50/50 tests passed.
;;; STDOUT ;;)
